fix z-index issues that stopped cards from being clicked.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,12 @@ html {
 
 .hide {
     display: none;
+    z-index: 0;
 }
 
 .show {
     display:grid!important;
+    z-index: 2;
 }
 
 .overlay {
